--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ and disagreed on:<br>
 • When I was a developer, I didn't feel like I belonged with my colleagues<br>
 in the middle:<br>
 • I probably won't code for a living ever again<br><br>
-It seems like those who left coding jobs still enjoy coding and they still do it but they don't believe it's a secure job as it doesn't pay enough. In addition, coders spend so much time at work which highly affect the work-life balance that everyone should aim to maintain. 
+It seems like those who left coding jobs still enjoy coding and they still do it but they don't believe it's a secure job as it doesn't pay enough. In addition, coders spend so much time at work which highly affect the work-life balance that everyone should aim to maintain. </p>
 
 <p>You could hear much more than this from people. It's essential that you take their words into account but remember that people are different and no one knows what's best for 'You' more than 'You'. <b>Enjoy expoloring life =) !</b> </p>
 
@@ -159,7 +159,7 @@ It seems like those who left coding jobs still enjoy coding and they still do it
 
 
 
-</p>
+
 </div>
 
 
