--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ It seems like those who left coding jobs still enjoy coding and they still do it
 <p>You could hear much more than this from people. It's essential that you take their words into account but remember that people are different and no one knows what's best for 'You' more than 'You'. <b>Enjoy expoloring life =) !</b> </p>
 
 
-
+<p>To see the code behind this analysis, click <a href="https://github.com/asunaidi/stack-overflow-survey">here</a> </p>
 
 
 
@@ -163,7 +163,6 @@ It seems like those who left coding jobs still enjoy coding and they still do it
 </div>
 
 
-<!-- <img src='https://www.sciencemag.org/sites/default/files/styles/inline__699w__no_aspect/public/iStock-careeroptions_16x9.jpg?itok=GvCE1Uhf'> -->
 
 
 
